# hse_ml_homework

./: app.py  csv_to_sqilte.py  ml_pipeline.py  pyproject.toml
data_preparation/: phase_download_csv_with_comments.ipynb  phase_production_db.ipynb
datasets/: embedding_idx_to_movie_id.json  movies.parquet
integrations/: chatgpt.py  hugingface.py  local_db.py  similarity_search.py  wiki.py
production_notebooks/: film_embeding.ipynb
static/: style.css
templates/: index.html
