[tool.poetry]
name = "hse-homework"
version = "0.1.0"
description = ""
authors = ["nkonovalov <kn@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
openai = "^1.6.1"
wikipedia = "^1.4.0"
jupyter = "^1.0.0"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

